<resources>
    <string name="app_name">RMSF Sensor Actuation App</string>
    <string name="app_name_simple">Fire Sensor Control</string>
    <string name="action_settings">Settings</string>
    <string name="smoke_level">Smoke Level</string>
    <string name="smoke_thres">Smoke Threshold</string>
    <string name="temp_level">Temperature Level</string>
    <string name="temp_thres">Temperature Threshold</string>
    <string name="smoke_def_value">0</string>
    <string name="temp_def_value">0</string>
    <string name="sendBtnTemp">Send</string>
    <string name="sendBtnSmoke">Send</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_dark_mode">Dark Mode</string>
    <string name="pref_description_dark_mode">Enable the nice dark mode</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Cloud &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>20 seconds</item>
        <item>40 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>5000</item>
        <item>10000</item>
        <item>20000</item>
        <item>40000</item>
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>900000</item>
        <item>-1</item>
    </string-array>


    <string-array name="multi_select_list_preference_default_value" />


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <string name="pref_title_api_route">Api Route</string>
    <string name="pref_title_api_server">Api Server</string>
    <string name="pref_title_api_port">Api Port</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="low_connectivity_warning">Low connectivity warning</string>
    <string name="actions_tab">Actions</string>
    <string name="views_tab">Views</string>
    <string name="gas_level">Gas level</string>
    <string name="temperature">Temperature</string>
    <string name="alarm">Alarm</string>
    <string name="water_pump">Water Pump</string>
    <string name="background_image">Background Image</string>

    <string name="channel_name">RMSFChannel</string>
    <string name="channel_description">RMSF App warnings channel</string>
    <string name="lastseen_indicator">LastSeen Indicator</string>

</resources>
