<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="NIGHT_MODE"
        android:summary="@string/pref_description_dark_mode"
        android:title="@string/pref_title_dark_mode" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="http://rmsf-server.herokuapp.com/"
        android:inputType="text"
        android:key="API_SERVER"
        android:maxLines="1"
        android:persistent="true"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_api_server" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="80"
        android:inputType="number"
        android:key="API_PORT"
        android:maxLines="1"
        android:persistent="true"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_api_port" />

</PreferenceScreen>
