<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.joaomariodev.rmsfsensoractuationapp.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="64dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2">

            <TextView
                android:id="@+id/TempTextViewLevel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="31dp"
                android:text="@string/temp_level"
                android:textColor="?attr/primaryTextColor"/>

            <TextView
                android:id="@+id/TextTemp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBaseline="@+id/TempTextViewLevel"
                android:layout_alignBottom="@+id/TempTextViewLevel"
                android:layout_marginStart="80dp"
                android:layout_toEndOf="@+id/TempTextViewLevel"
                android:text="@string/temp_def_value"
                android:textAlignment="viewStart"
                android:textColor="?attr/secondaryTextColor" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2">

            <TextView
                android:id="@+id/smokeTextViewLevel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="31dp"
                android:text="@string/smoke_level"
                android:textColor="?attr/primaryTextColor" />

            <TextView
                android:id="@+id/TextSmoke"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBaseline="@+id/smokeTextViewLevel"
                android:layout_alignBottom="@+id/smokeTextViewLevel"
                android:layout_marginStart="73dp"
                android:layout_toEndOf="@+id/smokeTextViewLevel"
                android:text="@string/smoke_def_value"
                android:textAlignment="viewStart"
                android:textColor="?attr/secondaryTextColor" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2">

            <TextView
                android:id="@+id/tempTextViewThresh"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="31dp"
                android:text="@string/temp_thres"
                android:textColor="?attr/primaryTextColor" />

            <EditText
                android:id="@+id/editValueTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="?attr/secondaryTextColor" />

            <Button
                android:id="@+id/TempThreshSend"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/editValueTemp"
                android:layout_alignBottom="@+id/editValueTemp"
                android:layout_marginStart="36dp"
                android:layout_toEndOf="@+id/editValueTemp"
                android:text="@string/sendBtnTemp"
                android:visibility="invisible" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2">

            <TextView
                android:id="@+id/smokeTextViewThresh"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="31dp"
                android:text="@string/smoke_thres"
                android:textColor="?attr/primaryTextColor" />

            <EditText
                android:id="@+id/editValueSmoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textColor="?attr/secondaryTextColor" />

            <Button
                android:id="@+id/SmokeThreshSend"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/editValueSmoke"
                android:layout_alignBottom="@+id/editValueSmoke"
                android:layout_marginStart="38dp"
                android:layout_toEndOf="@+id/editValueSmoke"
                android:text="@string/sendBtnSmoke"
                android:visibility="invisible" />

        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
