<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cloud_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.joaomariodev.rmsfsensoractuationapp.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/temperature"
                android:translationX="-4dp"
                app:srcCompat="@mipmap/temp_pic" />

            <EditText
                android:id="@+id/editValueTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView9"
                android:layout_toEndOf="@+id/imageView9"
                android:ems="10"
                android:inputType="numberDecimal"
                android:labelFor="@+id/temperature"
                android:textColor="?attr/secondaryTextColor" />

            <Button
                android:id="@+id/TempThreshSend"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/imageView9"
                android:layout_toEndOf="@+id/editValueTemp"
                android:text="@string/sendBtnTemp"
                android:visibility="invisible" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="41dp"
                android:contentDescription="@string/gas_level"
                android:translationX="-4dp"
                app:srcCompat="@mipmap/smoke_pic" />

            <EditText
                android:id="@+id/editValueSmoke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView8"
                android:layout_toEndOf="@+id/imageView8"
                android:ems="10"
                android:inputType="numberDecimal"
                android:labelFor="@+id/smokeTextViewThresh"
                android:textColor="?attr/secondaryTextColor" />

            <Button
                android:id="@+id/SmokeThreshSend"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/editValueSmoke"
                android:layout_alignBottom="@+id/editValueSmoke"
                android:layout_toEndOf="@+id/editValueSmoke"
                android:text="@string/sendBtnSmoke"
                android:visibility="invisible" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Switch
                    android:id="@+id/switch_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="66dp"
                    android:checked="false" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="41dp"
                    android:layout_height="41dp"
                    android:layout_above="@+id/switch_alarm"
                    android:layout_alignStart="@+id/switch_alarm"
                    android:contentDescription="@string/alarm"
                    app:srcCompat="@drawable/alarm" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <Switch
                    android:id="@+id/switch_water_pump"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="65dp" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="41dp"
                    android:layout_height="41dp"
                    android:layout_above="@+id/switch_water_pump"
                    android:layout_alignStart="@+id/switch_water_pump"
                    android:contentDescription="@string/water_pump"
                    app:srcCompat="@drawable/waterpump" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
